--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mike-portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://<mhammer708>.github.io",
   "dependencies": {
     "@popperjs/core": "^2.4.2",
     "@testing-library/jest-dom": "^4.2.4",
@@ -17,7 +18,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build&&gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -33,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.0.0"
   }
 }
